1205773991230263 - The sizes here seem not right. please check the design 1205804071985096 - Missing the results count. as in the design. 1205804071985105 - Results pagination indicator at 1 or 0 results should not show 1205804071985092 - This alert should no longer exist 1205773991230259 - Icons order and size 1205773991230255 - Un even spacing 1205773991230245 - For AI Content Detector no need for this icon. As in for now Html is not supported and can't be displayed 1205773991230237 - Powered by should be a part of the button 1205773991230233 - Pagination needs the word "Page" 1205773991230229 - We need max width for the report section for wide screens 1205773991230225 - <1 % what dose it mean? I think its a bug

--- a/projects/demo-app/src/app/pages/demo-report-previews/demo-report-previews.component.scss
+++ b/projects/demo-app/src/app/pages/demo-report-previews/demo-report-previews.component.scss
@@ -1,6 +1,7 @@
 :host {
 	width: 100%;
 	display: flex;
+	justify-content: center;
 
 	.custom-tab-title {
 		color: #3f9af5;
@@ -17,9 +18,9 @@
 
 	mat-icon {
 		color: #a0a9bf;
-		width: 18px;
-		height: 18px;
-		font-size: 18px;
+		width: 24px;
+		height: 24px;
+		font-size: 24px;
 		cursor: pointer;
 	}
 
